(fix): .ls-Creations CSS error, align-items: left invalid

--- a/13-loopstudios/scss/_ls-Creations.scss
+++ b/13-loopstudios/scss/_ls-Creations.scss
@@ -65,7 +65,6 @@
     display: flex;
     flex-direction: column;
     justify-content: left;
-    align-items: left;
 
     max-width: 69rem;
     text-align: left;
